@@ -1,3 +1,14 @@
+2017-08-25  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/math/common.py (squeezable_logspace):
+
+	Function to create a grid that is squeezed around a fixpoint.
+
+	* typhon/math/tests/test_math.py:
+
+	Added methods to test the basic functionality of
+	``squeezable_logspace``.
+
 2017-08-25  Richard Larsson <ric.larsson@gmail.com>
 
 	* typhon/arts/griddedfield.py: Added functional argument to refine
